fix(e2e/kotlin): guard test workingDir + enable preview/native-access on test fork